--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
+  "homepage": "https://github.com/4eNNightmare/html-text-editor",
   "type": "module",
   "devDependencies": {
     "@babel/core": "^7.19.3",
